--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,14 +1,14 @@
 {% extends 'base_auth.html' %}
 {% load i18n %}
 
-{% block title %}{% trans "Вход" %} - {% trans "Автошкола" %}{% endblock %}
+{% block title %}{% trans "Вход" %} - {% trans "Школа" %}{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
         <div class="card">
             <div class="card-header bg-primary text-white text-center">
-                <h3><i class="bi bi-mortarboard"></i> {% trans "Автошкола" %}</h3>
+                <h3><i class="bi bi-mortarboard"></i> {% trans "Школа" %}</h3>
                 <p class="mb-0">{% trans "Войдите в свой аккаунт" %}</p>
             </div>
             <div class="card-body">
