--- a/templates/accounts/user_list.html
+++ b/templates/accounts/user_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}User Management - Driving School{% endblock %}
+{% block title %}User Management - {% trans "Школа" %}{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
