--- a/templates/assignments/assignment_list.html
+++ b/templates/assignments/assignment_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Assignments - Driving School{% endblock %}
+{% block title %}Assignments - {% trans "Школа" %}{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
