--- a/templates/scheduling/lesson_form_old.html
+++ b/templates/scheduling/lesson_form_old.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Schedule Lesson - Driving School{% endblock %}
+{% block title %}Schedule Lesson - {% trans "Школа" %}{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
