--- a/templates/accounts/methodist_dashboard.html
+++ b/templates/accounts/methodist_dashboard.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Methodist Dashboard - Driving School{% endblock %}
+{% block title %}Methodist Dashboard - {% trans "Школа" %}{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
