--- a/templates/accounts/user_form_old.html
+++ b/templates/accounts/user_form_old.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    {% if object %}Edit User - {{ object.full_name }}{% else %}Add User{% endif %} - Driving School
+    {% if object %}Edit User - {{ object.full_name }}{% else %}Add User{% endif %} - {% trans "Школа" %}
 {% endblock %}
 
 {% block content %}
