--- a/templates/scheduling/calendar_new.html
+++ b/templates/scheduling/calendar_new.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-{% block title %}{% trans "Календарь" %} - {% trans "Автошкола" %}{% endblock %}
+{% block title %}{% trans "Календарь" %} - {% trans "Школа" %}{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
